task1: Remove tests from dataframe

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@ chroma_db_langchain
 __pycache__
 *.xlsx
 tests
-task2.zip
+*.zip
 task2/main2.py
 task2/README.md
 task2/requirements.txt
 task2/vector.py
+task2/.gitignore
+task2/main1.py
+task1
